--- a/config/automations/potty_time.yaml
+++ b/config/automations/potty_time.yaml
@@ -1,14 +1,10 @@
 id: '1763162380504'
 alias: Potty time
-description: ''
+description: Pre-emptively turn on bathroom light at 2:30am for nighttime bathroom visits
 triggers:
   - trigger: time
     at: 02:30:00
 conditions: []
 actions:
-  - action: scene.turn_on
-    metadata: {}
-    data: {}
-    target:
-      entity_id: scene.nighttime_potty
+  - action: script.adaptive_bathroom_lights
 mode: single
