--- a/config/automations/tv_time.yaml
+++ b/config/automations/tv_time.yaml
@@ -1,6 +1,6 @@
 id: '1732649000000'
 alias: TV Time
-description: ''
+description: Adaptive ambient lighting when TV turns on. Adjusts based on time of day - no changes during daytime, dim ambient in evening, very dim late night.
 triggers:
   - device_id: d84fc60fb0c4792dc4298fd90634e465
     domain: media_player
@@ -9,10 +9,7 @@ triggers:
     trigger: device
 conditions: []
 actions:
-  - action: scene.turn_on
-    metadata: {}
+  - action: script.adaptive_tv_time
     data:
-      transition: '{{ states(''input_number.tv_time_transition_duration'') | int }}'
-    target:
-      entity_id: scene.tv_time
+      transition: '{{ states(''input_number.tv_time_transition_duration'') | int(11) }}'
 mode: single
