--- a/config/scenes/working.yaml
+++ b/config/scenes/working.yaml
@@ -1,55 +1,13 @@
 id: '1762785763071'
 name: Working
 entities:
-  light.kitchen:
-    min_color_temp_kelvin: 2000
-    max_color_temp_kelvin: 6535
-    min_mireds: 153
-    max_mireds: 500
-    supported_color_modes:
-      - color_temp
-      - xy
-    color_mode: null
-    brightness: null
-    color_temp_kelvin: null
-    color_temp: null
-    hs_color: null
-    rgb_color: null
-    xy_color: null
-    is_hue_group: true
-    hue_scenes: []
-    hue_type: room
-    lights:
-      - Sink bulb
-      - Kitchen strip
-      - Island bulb
-    entity_id:
-      - light.island_bulb
-      - light.hue_lightstrip_plus_1
-      - light.sink_bulb
-    dynamics: false
-    icon: mdi:lightbulb-group
-    friendly_name: Kitchen
-    supported_features: 40
+  light.island_bulb:
+    state: 'off'
+  light.sink_bulb:
+    state: 'off'
+  light.hue_lightstrip_plus_1:
     state: 'off'
   light.living_room_light:
-    min_color_temp_kelvin: 2127
-    max_color_temp_kelvin: 6535
-    min_mireds: 153
-    max_mireds: 470
-    supported_color_modes:
-      - color_temp
-      - hs
-      - xy
-    color_mode: null
-    brightness: null
-    color_temp_kelvin: null
-    color_temp: null
-    hs_color: null
-    rgb_color: null
-    xy_color: null
-    friendly_name: Living Room Light
-    supported_features: 32
     state: 'off'
   light.bedroom_lamp:
     state: 'on'
@@ -64,8 +22,6 @@ entities:
     brightness: 255
     color_temp_kelvin: 5076
   switch.kitchen_counter_switch:
-    device_class: outlet
-    friendly_name: Kitchen counter switch
     state: 'off'
 icon: mdi:laptop
 metadata: {}
