--- a/config/scripts.yaml
+++ b/config/scripts.yaml
@@ -11,8 +11,8 @@
 #   - action: script.adaptive_lights
 #     data:
 #       lights:
-#         - light.kitchen
-#         - light.island_bulb
+#         - light.kitchen_lights
+#         - light.living_room_light
 #
 #   # Night mode - turn off at night
 #   - action: script.adaptive_lights
@@ -31,7 +31,7 @@
 #   # Night mode - dim warm white
 #   - action: script.adaptive_lights
 #     data:
-#       lights: [light.kitchen]
+#       lights: [light.kitchen_lights]
 #       night_mode: dim_warm
 
 adaptive_lights:
@@ -321,7 +321,7 @@ adaptive_kitchen_chill:
       default:
         - action: light.turn_on
           target:
-            entity_id: light.kitchen
+            entity_id: light.kitchen_lights
           data:
             brightness_pct: "{{ chill_brightness }}"
             color_temp_kelvin: "{{ chill_color_temp }}"
@@ -368,7 +368,7 @@ adaptive_good_morning:
     # Kitchen - main morning activity area
     - action: light.turn_on
       target:
-        entity_id: light.kitchen
+        entity_id: light.kitchen_lights
       data:
         brightness_pct: "{{ kitchen_brightness }}"
         color_temp_kelvin: "{{ color_temp }}"
@@ -424,7 +424,7 @@ adaptive_winding_down:
     # Kitchen - dim warm ambient
     - action: light.turn_on
       target:
-        entity_id: light.kitchen
+        entity_id: light.kitchen_lights
       data:
         brightness_pct: "{{ capped_brightness }}"
         color_temp_kelvin: "{{ color_temp }}"
