--- a/config/exposed_entities.yaml
+++ b/config/exposed_entities.yaml
@@ -20,19 +20,18 @@ light.bathroom_lights: true
 light.bedroom_lights: true
 light.dad_s_overhead_lights: true
 
-# Scenes
+# Scenes (static lighting presets)
 scene.alarm: true
-scene.bedroom_lights_off: true
-scene.bedroom_lights_on: true
 scene.cooking: true
-scene.daytime_potty: true
-scene.eating: true
-scene.good_morning: true
-scene.kitchen_chill: true
-scene.kitchen_off: true
 scene.lights_out: true
-scene.nighttime_potty: true
 scene.shaving: true
-scene.tv_time: true
-scene.winding_down: true
 scene.working: true
+
+# Scripts (adaptive lighting - replace static scenes)
+script.adaptive_bathroom_lights: true
+script.adaptive_bedroom_lights: true
+script.adaptive_eating: true
+script.adaptive_good_morning: true
+script.adaptive_kitchen_chill: true
+script.adaptive_tv_time: true
+script.adaptive_winding_down: true
