--- a/config/automations/dads_bedroom_button.yaml
+++ b/config/automations/dads_bedroom_button.yaml
@@ -30,9 +30,9 @@ actions:
           - condition: template
             value_template: '{{ state_attr(''event.bedside_button_button'', ''event_type'') == ''multi_press_2'' }}'
         sequence:
-          - action: scene.turn_on
+          - action: script.turn_on
             target:
-              entity_id: scene.good_morning
+              entity_id: script.adaptive_good_morning
       - conditions:
           - condition: template
             value_template: '{{ state_attr(''event.bedside_button_button'', ''event_type'') == ''long_press'' }}'
