--- a/config/homekit_exposed.yaml
+++ b/config/homekit_exposed.yaml
@@ -18,9 +18,11 @@ include_entities:
   # Scenes (used on dashboards)
   - scene.lights_out
   - scene.cooking
+  - scene.working
   # Scripts (adaptive lighting - used on dashboards)
   - script.adaptive_charlie_eating
   - script.adaptive_good_morning
+  - script.adaptive_kitchen_chill
   - script.adaptive_tv_time
   - script.adaptive_winding_down
   - script.adaptive_eating
