--- a/config/automations/dads_bedroom_button.yaml
+++ b/config/automations/dads_bedroom_button.yaml
@@ -17,7 +17,7 @@ actions:
                     entity_id: light.bedroom_lights
                     state: 'off'
                 sequence:
-                  - action: script.adaptive_bedroom_lights
+                  - action: script.bedroom_lights
               - conditions:
                   - condition: state
                     entity_id: light.bedroom_lights
@@ -32,7 +32,7 @@ actions:
         sequence:
           - action: script.turn_on
             target:
-              entity_id: script.adaptive_good_morning
+              entity_id: script.good_morning
       - conditions:
           - condition: template
             value_template: '{{ state_attr(''event.bedside_button_button'', ''event_type'') == ''long_press'' }}'
